[package]
name = "crayon-audio"
version = "0.7.1"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "The audio module of crayon game framework."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "game-dev", "audio"]
categories = ["multimedia", "game-engines"]

[dependencies]
crayon = { path = "../../", version = "0.7.1" }
failure = "0.1.2"
lewton = "0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.8.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {git="https://github.com/rustwasm/wasm-bindgen", rev="d71ab78fc65c0dc1ee3420c6fc8a9ba5d7c4ba59"}
js-sys = "0.3.6"
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [
    'AudioContext',
    'AudioDestinationNode',
    'AudioBufferSourceNode',
    'AudioNode',
    'AudioParam',
    'ScriptProcessorNode',
    'AudioProcessingEvent',
    'AudioBuffer',
]